--- a/notification_services/docker-compose.yml
+++ b/notification_services/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3.8'
 
 services:
+
+  notify:
+    container_name: notify
+    restart: always
+    build: ./
+    ports:
+      - "8000:8000"
+
   rabbitmq:
     image: rabbitmq:3.10.7-management
     container_name: rabbitmq
