Add: env example

--- a/notification_services/.env.example
+++ b/notification_services/.env.example
@@ -1,8 +1,8 @@
 DB_NAME=notify
 DB_USER=admin
 DB_PASSWORD=password
-DB_HOST=db
+DB_HOST=notify_db
 DB_PORT=5432
 DEBUG = False
-DJANGO_SETTINGS_MODULE=notify_admin_panel.settings
 DJANGO_ADMIN_NOTICE_PORT=8008
+DJANGO_SUPERUSER_PASSWORD=123qwe
