--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,18 +9,6 @@ services:
     ports:
       - "8000:8000"
 
-  rabbitmq:
-    image: rabbitmq:3.10.7-management
-    container_name: rabbitmq
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    healthcheck:
-      test: rabbitmq-diagnostics -q status
-      interval: 15s
-      timeout: 2s
-      retries: 15
-
   admin_notifications:
     container_name: admin_notifications
     build:
@@ -55,3 +43,58 @@ services:
       retries: 5
     ports:
       - "5432:5432"
+
+  rabbitmq1:
+    image: rabbitmq:3-management
+    hostname: rabbitmq1
+    environment:
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
+      - RABBITMQ_DEFAULT_VHOST=${RABBITMQ_DEFAULT_VHOST}
+    volumes:
+      - ./rabbitmq/.erlang.cookie:/var/lib/rabbitmq/.erlang.cookie
+      - ./rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /usr/local/bin/cluster-entrypoint.sh
+
+  rabbitmq2:
+    image: rabbitmq:3-management
+    hostname: rabbitmq2
+    depends_on:
+      - rabbitmq1
+    environment:
+      - JOIN_CLUSTER_HOST=rabbitmq1
+    volumes:
+      - ./rabbitmq/.erlang.cookie:/var/lib/rabbitmq/.erlang.cookie
+      - ./rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /usr/local/bin/cluster-entrypoint.sh
+
+  rabbitmq3:
+    image: rabbitmq:3-management
+    hostname: rabbitmq3
+    depends_on:
+      - rabbitmq1
+    environment:
+      - JOIN_CLUSTER_HOST=rabbitmq1
+    volumes:
+      - ./rabbitmq/.erlang.cookie:/var/lib/rabbitmq/.erlang.cookie
+      - ./rabbitmq/cluster-entrypoint.sh:/usr/local/bin/cluster-entrypoint.sh
+    entrypoint: /usr/local/bin/cluster-entrypoint.sh
+
+  haproxy:
+    image: haproxy:1.7
+    container_name: rabbit_queue
+    volumes:
+      - ./rabbitmq/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro
+    depends_on:
+      - rabbitmq1
+      - rabbitmq2
+      - rabbitmq3
+    ports:
+      - 15672:15672
+      - 5672:5672
+
+  consumer:
+    build: ./rabbitmq/consumer
+    restart: always
+    depends_on:
+      - haproxy
