--- a/rabbitmq/.env
+++ b/rabbitmq/.env
@@ -1,6 +1,7 @@
 RABBITMQ_DEFAULT_USER=guest
 RABBITMQ_DEFAULT_PASS=guest
 RABBITMQ_CONTAINER_NAME=rabbit_queue
+RABBITMQ_QUEUE_NAME=email_queue
 RABBITMQ_DEFAULT_VHOST=/
 SMTP_HOST=smtp.yandex.ru
 SMTP_PORT=465
