--- a/rabbitmq/.env
+++ b/rabbitmq/.env
@@ -7,3 +7,5 @@ SMTP_HOST=smtp.yandex.ru
 SMTP_PORT=465
 SMTP_USER=volodin.v-i-v
 SMTP_PASSWORD=yoozuybderppauve
+MAILHOG_HOST=mailhog_service
+MAILHOG_PORT=1025
